style: fix styling issues on mobile

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-$navbar-dropdown-arrow: hsl(0, 0%, 29%);
 // Set your brand colors
 // $purple: #8a4d76;
 // $pink: #fa7c91;
@@ -34,8 +33,10 @@ $navbar-dropdown-arrow: hsl(0, 0%, 29%);
 // @import 'bulma/sass/layout/section.sass';
 
 .is-container {
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 20px 0 #e1e0e9;
-  padding: 1.5rem !important;
+  @include from($desktop) {
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 0 2px 20px 0 #e1e0e9;
+    padding: 1.5rem !important;
+  }
 }
